<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RoboBinding-album-sample</string>
    <string name="introduction">Album Sample - Presentation Model by Martin Fowler;\n http://martinfowler.com/eaaDev/PresentationModel.html</string>
    <string name="albums">Albums</string>
    <string name="create">Create</string>
    <string name="view_album">View Album</string>
    <string name="create_album">Create Album</string>
    <string name="edit_album">Edit Album</string>
    <string name="save">Save</string>
    <string name="composer">Composer</string>
    <string name="classical">Classical</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="delete_album">Delete Album</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="are_you_sure_">Are you sure?</string>
    <string name="toggle_itemlayout">Toggle itemLayout</string>
    <string name="albums_list_empty">No albums to view</string>
</resources>
