<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/ScreenTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_album" />

            <TextView
                style="@style/Heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                bind:text="{title}" />

            <TextView
                style="@style/Heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                bind:text="{artist}" />

            <TextView
                style="@style/Heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/classical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:text="{classicalDescription}" />

            <TextView
                style="@style/Heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/composer"
                bind:visibility="{composerEnabled}" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                bind:text="{composer}"
                bind:visibility="{composerEnabled}" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        bind:onClick="editAlbum"
        android:text="@string/edit" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        bind:onClick="deleteAlbum"
        android:text="@string/delete" />

</LinearLayout>